# Django_Doker_Vanilla_web_app_Template

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docker/db/: Dockerfile
docker/nginx/: Dockerfile  default.conf
docker/styles/: Dockerfile
docker/web/: Dockerfile
scripts/: rename_project.py
web/apps/core/: models.py  urls.py  views.py
web/apps/core/templatetags/: core_tags.py
web/apps/pages/: urls.py  views.py
web/asset/scss/: styles.scss
web/asset/scss/blocks/: _about.scss  _button.scss  _contact_info.scss  _features.scss  _form.scss  _hero.scss
web/asset/scss/pages/: _contacts.scss  _home.scss
web/asset/scss/tokens/: _fonts.scss  _globals.scss  _media.scss  _mixins.scss  _normalize.scss  _utils.scss  _variables.scss
web/collected_static/: browserconfig.xml
web/collected_static/css/: styles.css.map
web/config/: settings.py  urls.py
web/config/settings/: base.py  local.py  production.py
web/static/: manifest.json
web/static/css/: styles.css  styles.css.map
web/templates/: base.html
web/templates/components/sections/: about_section.html  contact_form.html  contact_info.html  features.html  hero.html
web/templates/layout/: footer.html  header.html
web/templates/pages/: about.html  contacts.html  home.html
web/templates/partials/: analytics.html  favicons.html  head_assets.html  head_meta.html  json_ld.html  og_tags.html  scripts_footer.html
web/tests/integration/: test_pages.py
