[project]
name = "nomondays-web-app"
version = "0.1.0"
description = "Nomondays Web App - Infrastructure V2.0"
authors = [{name = "VelValerian"}]
dependencies = [
    "django==5.2.12",
    "django-axes",
    "django-debug-toolbar",
    "psycopg",
    "redis",
    "django-redis"
]
requires-python = ">=3.13"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
